--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>Highly enuthusiast for the job, so that i can utilize my skills and knowledge for the betterment of company and for my overall development</p>
      
     
-    <table border="1" style="width: 50%;border: 3px solid red;text-align: center;background-color: antiquewhite;float: left;" cellpadding="10" cellspacing="10" >
+    <table border="1" style="width: 50%;border: 3px solid red;text-align: center;background-color: antiquewhite;" cellpadding="10" cellspacing="10" >
         <tr>
             <th style="width:40%">Qualification</th>
             <th style="width:40%">Institute Name</th>
